<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_in"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/colorTextBackground"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/colorTextBackground"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:padding="12dp"
        android:hint="@string/enter_password"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button_sign_up"
            android:text="@string/btn_login"
            android:backgroundTint="#1E2C7A"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/button_login"
            android:text="@string/btn_sign_up"
            android:textColor="@color/white"
            android:backgroundTint="#434141"
            android:textSize="12dp" />

    </LinearLayout>



</LinearLayout>